apps/web/k8s/runner.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service_name
  labels:
    app: service_name
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service_name
  template:
    metadata:
      labels:
        app: service_name
    spec:
      volumes:
        - name: workspace-volume
          emptyDir: {}
      containers:
      - name: replit-runner
        image: rohannaido/replit-runner
        ports:
        - containerPort: 4000
        - containerPort: 4001
        volumeMounts:
        - name: workspace-volume
          mountPath: /workspace
        resources:
          requests:
            cpu: "1"
            memory: "1Gi"
          limits:
            cpu: "1"
            memory: "1Gi"

---
apiVersion: v1
kind: Service
metadata:
  name: service_name
spec:
  selector:
    app: service_name
  ports:
    - protocol: TCP
      name: ws
      port: 4000
      targetPort: 4000
    - protocol: TCP
      name: user
      port: 4001
      targetPort: 4001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service_name
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service_name
            port:
              number: 4000
      - path: /output
        pathType: Prefix
        backend:
          service:
            name: service_name
            port:
              number: 4001
